@@ -78,7 +78,7 @@ public:
 	void setNaNValueToZero(const bool);
 	bool NaNValueToZeroEnabled() const;
     void setCreateIndexEnabled(const bool);
-	void setParseRowsName(const bool);
+	void setImportObjectNames(const bool);
 
 	void setVectorNames(const QString&);
 	QStringList vectorNames() const;
